<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movieLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0d1811"
    tools:context=".Movie_Activity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="175dp">

                <ImageView
                    android:id="@+id/moviethumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#2d2d2d"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/playthumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/play"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>


            <TextView
                android:id="@+id/txttitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/moveTitleTxt"
                android:textColor="#ffffff"
                android:textSize="23sp"
                android:textStyle="bold" />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:rating="0"
                android:stepSize="1" />

            <TextView
                android:id="@+id/txtdescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:text="@string/descTxt"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <Button
                android:id="@+id/ratebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttongold"
                android:text="@string/saveRatingTxt"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/buttonred"
                android:text="@string/deleteMovieTxt"
                android:textColor="@color/cardview_dark_background"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>